# llm-inference

./: .gitignore  README.md  benchmark_results.json  load_test_results.json  load_test_results_v2.json  nsys_report.md  nsys_vllm_profile.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py  models.py
app/api/: __init__.py  chat.py  health.py
app/core/: __init__.py  cache.py  image_processor.py  vllm_engine.py
app/middleware/: __init__.py  auth.py  logging.py  rate_limit.py
app/utils/: __init__.py  gpu_monitor.py  metrics.py
config/: .env.example  production.yaml
docs/: PERFORMANCE_REPORT.md
infrastructure/terraform/: main.tf  outputs.tf  terraform.tfvars.example  user_data.sh  variables.tf
infrastructure/terraform/scripts/: import_existing.sh
monitoring/: docker-compose.yml  prometheus.yml
monitoring/alerts/: llm_alerts.yml
monitoring/grafana/dashboards/: llm-inference-complete.json  llm-inference-dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/grafana/provisioning/datasources/: datasource.yml
scripts/: benchmark.py  download_model.py  load_test.py  monitor_gpu.py
tests/: __init__.py  test_api.py  test_cache.py  test_models.py
